update survey on multi-task learning

--- a/_posts/2018-12-26-多任务学习综述.md
+++ b/_posts/2018-12-26-多任务学习综述.md
@@ -112,7 +112,7 @@ $$
 举个简单的栗子 [10] 来说明这个方法的思路，假设 $$h=2$$，$$g_1(\cdot)$$ 和 $$g_2(\cdot)$$ 定义为：
 
 $$
-g_1(W_1)=\lambda_1||W_1||_{\infty,1}$，$g_2(W_2)=\lambda_2||W_2||_{1},
+g_1(W_1)=\lambda_1||W_1||_{\infty,1},\,g_2(W_2)=\lambda_2||W_2||_{1},
 $$
 
 其中 $$\lambda_1$$ 和 $$\lambda_2$$ 是正则化系数，$$g_1(W_1)$$ 可以使得 $$W_1$$ 是行稀疏的，因此可以帮助挑选出最重要的特征，$$g_2(W_2)$$ 可以使得 $$W_2$$ 是 $$L1$$ 稀疏的。所以综合起来看，当对应行在 $$W_1$$ 和 $$W_2$$ 中都稀疏时，$$W$$ 可以去掉对所有任务都不重要的特征，同时，$$W_2$$ 又可以帮助挑出对某一个任务很重要但对其它任务不重要的特征。这类分解法中，分解的个数 $$h$$ 是个非常重要的参数，往往需要人凭经验判定，这也算是这类方法的一大缺陷。
@@ -121,7 +121,7 @@ $$
 这是个冷门的流派，基本上没有什么人在这个方法上灌水，除了文章 [2]。这套方法的思路是先估计样本来自自身任务的概率与来自其它任务的概率比值，再用这个比值计算该样本的权重，最后使用加权的样本用于学习每一个任务的模型。
 
 ## 3. 总结
-如果说要求训练效率高，并且模型可扩展性强，效果也要好，基于这些需求，在调研了很多算法以及尝试了很多模型后，2.1.1特征变换法中的深度学习方法是一个比较理想的选择。
+如果说要求训练效率高，并且模型可扩展性强，效果也要好，基于这些需求，在调研了很多算法以及尝试了很多模型后，2.1.1 特征变换法中的深度学习方法是一个比较理想的选择。
 
 但是，基于特征的方法有一个很大的问题，由于权重是共享的，当这些任务中存在不那么相关的任务时，任务之间会相互扰乱，影响效果。另外，以上综述的这些令人眼花缭乱的方法并非孤立的，在很大程度上可以结合起来使用，这里有着巨大的优化空间，尤其是部分任务的相关性没那么强的时候，比如可以对相关性不强的任务的最后输出网络做差异化处理，确保每个任务都能达到最佳的训练效果。
 
