--- a/_posts/2020-10-10-第三代召回技术调研.md
+++ b/_posts/2020-10-10-第三代召回技术调研.md
@@ -3,8 +3,8 @@ layout: post
 title:  "第三代召回技术调研"
 date:   2019-10-10 00:00:00
 author: caoxiaoqing
-categories: 工具
-tags: 工具
+categories: 算法
+tags: 算法
 ---
 
 * content
@@ -12,5 +12,5 @@ tags: 工具
 
 最近一年发现腾讯文档还挺好用的，很多文档都直接写在上面了，所见即所得，还方便分享，因此都少在这里发了，今天贴个链接吧，关于第三代召回技术的调研。
 
-https://docs.qq.com/doc/DRFBIRHVuYkxsWmtz
+腾讯文档链接：[点我](https://docs.qq.com/doc/DRFBIRHVuYkxsWmtz)
 
