--- a/_posts/2020-09-25-小样本问题解决方案.md
+++ b/_posts/2020-09-25-小样本问题解决方案.md
@@ -12,6 +12,6 @@ tags: 算法
 
 关于推荐场景小样本问题的模型角度方案
 
-腾讯文档链接：[点我](https://docs.qq.com/doc/DRHlteHNYeXpBZm9Q)
+腾讯文档链接：[点我](https://docs.qq.com/doc/)
 
 
