--- a/_posts/持续更新-用文档持续记录生活中的一些感悟和零星灵感.md
+++ b/_posts/持续更新-用文档持续记录生活中的一些感悟和零星灵感.md
@@ -9,7 +9,9 @@ tags: 读书
 
 * content
 {:toc}
-终于可以再继续更新我的博客了，算法这部分已经积累的不少的工作，正在梳理中，跟之前的博客内容相比，更系统和有深度，后面也许会公开也许部分公开。另外，这里我希望用一个文档持续记录下每天的一些想法，关于生活、关于工作、关于人生、关于英语学习等等等等，不一定每天更新，但会持续记录。
+终于可以再继续更新我的博客了，算法这部分已经积累的不少的工作，正在梳理中，跟之前的博客内容相比，更系统和有深度，后面也许会公开也许部分公开。另外，这里我希望用一个文档持续记录下每天的一些想法，关于生活、关于工作、关于人生、关于英语学习等等等等，不一定每天更新，但会持续记录。如果你对我的想法感兴趣或者对我的想法有一些建议，欢迎在腾讯文档里给我留评论，我会很高兴和你交流。
+
+
 
 腾讯文档链接：[点我](https://docs.qq.com/doc/DRFRPamRSUVZ5UHVQ)
 
