update new blog

--- a/_posts/2022-05-01-改用腾讯文档记录我的想法和推荐算法总结.md
+++ b/_posts/2022-05-01-改用腾讯文档记录我的想法和推荐算法总结.md
@@ -9,11 +9,8 @@ tags: 读书
 
 * content
 {:toc}
-终于可以再继续更新我的博客了，算法这部分已经积累的不少的工作，正在梳理中，跟之前的博客内容相比，更系统和有深度，后面也许会公开也许部分公开。另外，我还会用一个文档持续记录下每天的一些想法，关于生活、关于工作、关于人生、关于英语学习等等等等，不一定每天更新，但会持续记录。如果你对我的想法感兴趣或者对我的想法有一些建议，欢迎在腾讯文档里给我留评论，我会很高兴和你交流。
+终于可以再继续更新我的博客了，算法这部分已经积累的不少的工作，正在梳理中，跟之前的博客内容相比，更系统和有深度，后面也许会公开也许部分公开。另外，我还会持续记录下每天的一些想法，关于生活、关于工作、关于人生、关于英语学习等等等等，不一定每天更新，但会持续记录。如果你对我的想法感兴趣或者对我的想法有一些建议，欢迎在腾讯文档里给我留评论，我会很高兴和你交流。
 
 后续的的更新都会在这两个腾讯文档里进行：
 
-[CXQ的胡言乱路](https://docs.qq.com/doc/DRFRPamRSUVZ5UHVQ)
-
-[CXQ的算法博客](https://docs.qq.com/doc/DRGt1WVZUVFpUTkR5)
-
+[CXQ的胡言乱语](https://docs.qq.com/doc/DRFRPamRSUVZ5UHVQ)
