--- a/_posts/2022-05-01-改用在线文档记录我的想法和推荐算法总结.md
+++ b/_posts/2022-05-01-改用在线文档记录我的想法和推荐算法总结.md
@@ -11,8 +11,11 @@ tags: 读书
 {:toc}
 终于可以再继续更新我的博客了，算法这部分已经积累的不少的工作，正在梳理中，跟之前的博客内容相比，更系统和有深度，后面也许会公开也许部分公开。另外，我还会持续记录下每天的一些想法，关于生活、关于工作、关于人生、关于英语学习等等等等，不一定每天更新，但会持续记录。如果你对我的想法感兴趣或者对我的想法有一些建议，欢迎在文档里给我留评论，我会很高兴和你交流。
 
-后续的的更新都会在这两个文档里同步进行，腾讯文档这个如果被封了，就用石墨文档吧，石墨文档还方便，不用登陆即可看：
+后续的的更新都会在下面的文档里同步进行，腾讯文档这个如果被封了，就用石墨文档或者飞书文档吧，石墨文档和飞书文档都不用登陆即可看，另外，体验了这3个文档后，强烈推荐飞书文档，超级好用，其次是石墨文档，腾讯文档反而是最垃圾的：
 
-[腾讯文档 - CXQ的胡言乱语](https://docs.qq.com/doc/DRE9seHp0YmR5d1FY)
+[飞书文档 - CXQ的胡言乱语](https://uvus82cmmg.feishu.cn/docx/CsXYdW8HIoP741xK3grc4i0Wn2g)(不用登陆，强烈推荐)
+
+[腾讯文档 - CXQ的胡言乱语](https://docs.qq.com/doc/DRHNZVk1sSXNReGhX)
 
 [石墨文档 - CXQ的胡言乱语](https://shimo.im/docs/KlkKVz4PMOiKamqd)
+
